fix: itemGroup translation

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ eclipse
 run
 .idea/runConfigurations/Fabric_Client___fabric__fabric.xml
 .idea/runConfigurations/Fabric_Server___fabric__fabric.xml
+neoforge
